--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Python",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/server.py",
             "console": "integratedTerminal",
             "args": [
                 "--paramPath",
-                "results/test1/fed/experiement.yaml"
+                "NEW_DATA/f/fed/experiment.yaml"
             ],
             "justMyCode": true
         }
